@@ -38,7 +38,9 @@ namespace MySql.Data.MySqlClient
     [RunInstaller(true)]
 	public class CustomInstaller : Installer
 	{
-        public CustomInstaller()
+		int perfMonIndex;
+		
+		public CustomInstaller()
         {
             // add in a perf mon installer
             PerformanceCounterInstaller p = new PerformanceCounterInstaller();
@@ -58,7 +60,7 @@ namespace MySql.Data.MySqlClient
 
             p.Counters.Add(ccd1);
             p.Counters.Add(ccd2);
-            Installers.Add(p);
+            perfMonIndex = Installers.Add(p);
         }
 
 		/// <summary>
@@ -150,6 +152,11 @@ namespace MySql.Data.MySqlClient
 		/// <param name="savedState"></param>
 		public override void Uninstall(System.Collections.IDictionary savedState)
 		{
+			// if our category doesn't exist, then we don't want to run the perf mon
+			// installer
+			if (!PerformanceCounterCategory.Exists(Resources.PerfMonCategoryName))
+				base.Installers.RemoveAt(perfMonIndex);
+
 			base.Uninstall(savedState);
 
 			RemoveProviderFromMachineConfig();
